--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,12 +6,24 @@ backend:
 # -  name: git-gateway
 # +  name: github
 # +  repo: kathleenmont/LMPM
-
+publish_mode: editorial_workflow
 # display_url: https://gatsbro.netlify.com # This url will display in the top-right of the CMS
+# media_library:
+#   name: uploadcare
+#   config:
+#     publicKey: a73a170cb5cdef662983
+#     multiple: false
+#     tabs: 'file camera url facebook gdrive'
+#     effects: 'crop,rotate,enhance,grayscale'
+#     imageShrink: '2000x2000'
+#     previewStep: true
+#     clearable: true
+
 media_library:
-  name: uploadcare
+  name: cloudinary
   config:
-    publicKey: a73a170cb5cdef662983
+    cloud_name: 673516864624274
+    api_key: 673516864624274
     multiple: false
     tabs: 'file camera url facebook gdrive'
     effects: 'crop,rotate,enhance,grayscale'
