--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash.clonedeep": "^4.5.0",
     "modern-normalize": "^0.5.0",
     "netlify-cms-app": "^2.9.7",
+    "netlify-cms-media-library-cloudinary": "^1.3.4",
     "node-sass": "^4.13.0",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
