--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,8 +1,9 @@
 siteTitle: Yellow Cake
-siteUrl: 'https://yellowcake.netlify.com'
+siteUrl: 'https://lmp.netlify.com'
 siteDescription: >-
   A starter project for creating lightning-fast websites with Gatsby v2 Netlify
   CMS v2 and Uploadcare media library.
 socialMediaCard:
-  image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
-googleTrackingId: 'UA-133175780-1'
+  image: >-
+    https://res.cloudinary.com/duxt6i5yp/image/upload/v1581092928/lm-property-management-logo_quy4dt.png
+googleTrackingId: UA-133175780-1
